working cart and more styling

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
 				</div>
 			</div>
 			<div id="application"></div>
-			<script type="text/javascript">
-			  // $(document).ready(function() {
-			  //   $('.carousel').carousel({interval: 30000});
-			  // });
+			<!-- <script type="text/javascript">
+			  $(document).ready(function() {
+			    $('.carousel').carousel({interval: 30000});
+			  }); -->
 			</script>
 		</body>
 </html>
